// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Components Should Render AnsweredQuestions component should render correctly 1`] = `
<div>
  <style__Link
    href="CustomerQuestions"
  >
    <style__BlueText>
      | 
       answered questions
    </style__BlueText>
  </style__Link>
</div>
`;

exports[`Components Should Render App component should render correctly onto the page 1`] = `
<div>
  <div>
    <strong>
      BAD REQUEST - INVALID URL
    </strong>
  </div>
  <br />
  <div>
    HTTP ERROR 400. The request URL is invalid
  </div>
</div>
`;

exports[`Components Should Render ConfigurationOption component should render correctly 1`] = `<style__ConfigBox />`;

exports[`Components Should Render DescriptionPoint component should render correctly 1`] = `
<li>
  <style__DesPoint />
</li>
`;

exports[`Components Should Render ItemHeading component should render correctly 1`] = `
<div>
  <style__TitleText>
     | 
  </style__TitleText>
  <style__BlueText>
    <u>
      Brand: 
    </u>
  </style__BlueText>
</div>
`;

exports[`Components Should Render ItemPriceDetails component should render correctly 1`] = `
<div>
  <style__PriceText>
    List Price: 
  </style__PriceText>
   
  <style__ListPriceText>
    $
    NaN
  </style__ListPriceText>
  <br />
  <style__PriceText>
    With Deal:
  </style__PriceText>
   
  <style__WithDealPriceText>
    $
  </style__WithDealPriceText>
    Prime Free Delivery
  <br />
  <style__PriceText>
    You Save:
  </style__PriceText>
   
  <style__PriceSavedText>
    $
    10.00
     (
    NaN
    %) 
  </style__PriceSavedText>
  <div>
    Order it now
  </div>
  <br />
  <br />
  <div>
    FREE Delivery 
    <b>
      Feb 26th
       - 
      Mar 3rd
    </b>
     for Prime members
  </div>
  <style__BlueText>
    Details
  </style__BlueText>
  <br />
  <div>
    Ships from and sold by 
    .com Services LLC.
  </div>
</div>
`;

exports[`Components Should Render Rating component should render correctly 1`] = `
<div>
  <style__RatingBox>
    <div>
      <span
        data-for="starChart"
        data-tip={true}
      >
        <StarRatingComponent
          editing={true}
          emptyStarColor="#333"
          starColor="#FFA500"
          starCount={5}
        />
      </span>
      <ReactTooltip
        backgroundColor="white"
        border={true}
        borderColor="black"
        clickable={false}
        effect="solid"
        id="starChart"
        insecure={true}
        multiline={true}
        place="bottom"
        resizeHide={true}
        textColor="black"
        wrapper="div"
      >
        <div>
          <StarRatingComponent
            editing={true}
            emptyStarColor="#333"
            starColor="#FFA500"
            starCount={5}
          />
           out of 5
          <br />
           global rating
        </div>
        <StarChart />
      </ReactTooltip>
    </div>
    <style__Link
      href="#CustomerReviews"
    >
      <style__RatingText>
         
         ratings 
      </style__RatingText>
    </style__Link>
  </style__RatingBox>
  <style__ClimatePledgeFriendlyText>
    <img
      src="https://freedesignfile.com/upload/2016/06/Globe-with-tree-logos-vector-design-02.jpg"
      style={
        Object {
          "height": "22px",
          "width": "22px",
        }
      }
    />
    Climate Pledge Friendly
  </style__ClimatePledgeFriendlyText>
  <style__BlueText>
    Audio Speakers
  </style__BlueText>
</div>
`;
